--- a/src/components/TimeDisplay/index.less
+++ b/src/components/TimeDisplay/index.less
@@ -1,12 +1,11 @@
 // 变量定义
 @bg-blue: #8fb1cc;
 @bg-green: #c5d38a;
-@text-color: #4a5d62;
+@text-color: #40a6c0;
 
 .time-container {
   display: inline-flex;
   align-items: center;
-  background-color: @bg-blue;
   padding: 10px 20px;
   font-family: 'Arial Black', sans-serif; // 建议寻找类似的加粗无衬线字体
   color: @text-color;
@@ -15,7 +14,7 @@
   .time-main {
     display: flex;
     align-items: center;
-    font-size: 80px; // 根据需要调整大小
+    font-size: 24px;
     line-height: 1;
     font-weight: 900;
     letter-spacing: -2px;
@@ -44,13 +43,13 @@
     height: 100%;
 
     .day-name {
-      font-size: 24px;
+      font-size: 12px;
       line-height: 1.1;
       font-weight: bold;
     }
 
     .date-num {
-      font-size: 24px;
+      font-size: 12px;
       line-height: 1.1;
       font-weight: bold;
       letter-spacing: 1px;
