--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@ body {
   font-family: "pmzd";
   src: url("/sc-datav/font/pmzd.woff2") format("woff2");
 }
+
+
+.compass{
+  top: 100px !important;
+}
+.navigation-controls{
+  top: 180px !important;
+}
